style: fix blob overflow

--- a/src/components/GasStation/PartnersCardsImage/styles.module.css
+++ b/src/components/GasStation/PartnersCardsImage/styles.module.css
@@ -34,7 +34,7 @@
 
   .spot1 {
     position: absolute;
-    right: -200px;
+    right: -50px;
     top: -650px;
     z-index: -1;
     width: 1600px;
