--- a/src/components/GasStation/TextBlockImagePartners/styles.module.css
+++ b/src/components/GasStation/TextBlockImagePartners/styles.module.css
@@ -81,7 +81,7 @@
 
   .spot2 {
     position: absolute;
-    right: -200px;
+    right: -50px;
     top: -250px;
     z-index: -1;
     width: 1000px;
